feat: add shared header skeleton

--- a/tramwaj_wodny/CMakeLists.txt
+++ b/tramwaj_wodny/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Dodaj źródło do pliku wykonywalnego tego projektu.
-add_executable (tramwaj_wodny "tramwaj_wodny.cpp" "tramwaj_wodny.h")
+add_executable (tramwaj_wodny "tramwaj_wodny.cpp" "tramwaj_wodny.h" "common.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET tramwaj_wodny PROPERTY CXX_STANDARD 20)
