--- a/tramwaj_wodny/CMakeLists.txt
+++ b/tramwaj_wodny/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Dodaj źródło do pliku wykonywalnego tego projektu.
-add_executable (tramwaj_wodny "tramwaj.cpp" "tramwaj.h" "common.h")
+add_executable (tramwaj_wodny "tramwaj.cpp" "tramwaj.h" "common.h" "captain.cpp" "cli.cpp" "cli.h" "dispatcher.cpp" "ipc.cpp" "ipc.h" "logging.cpp" "logging.h" "passenger.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET tramwaj_wodny PROPERTY CXX_STANDARD 20)
