--- a/tramwaj_wodny/CMakeLists.txt
+++ b/tramwaj_wodny/CMakeLists.txt
@@ -1,12 +1,26 @@
-﻿# CMakeList.txt: projekt CMake dla elementu tramwaj_wodny, dołącz źródło i zdefiniuj
-# tutaj logikę specyficzną dla projektu.
-#
+﻿set(COMMON_SOURCES
+  ipc.cpp
+  cli.cpp
+  util.cpp
+  logging.cpp
+)
 
-# Dodaj źródło do pliku wykonywalnego tego projektu.
-add_executable (tramwaj_wodny "tramwaj.cpp"  "common.h" "captain.cpp" "cli.cpp" "cli.h" "dispatcher.cpp" "ipc.cpp" "ipc.h" "logging.cpp" "logging.h" "passenger.cpp" "util.cpp" "util.h")
+add_executable(tramwaj
+  tramwaj.cpp
+  ${COMMON_SOURCES}
+)
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET tramwaj_wodny PROPERTY CXX_STANDARD 20)
-endif()
+add_executable(captain
+  captain.cpp
+  ${COMMON_SOURCES}
+)
 
-# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
+add_executable(passenger
+  passenger.cpp
+  ${COMMON_SOURCES}
+)
+
+add_executable(dispatcher
+  dispatcher.cpp
+  ${COMMON_SOURCES}
+)
